FEATURE-001 lombok, pingCheck() 추가